--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,7 +304,8 @@ padding-bottom: 75px;
 
 .footer-item {
     display: inline-block;
-    width: 50%;
+    width: 100%;
+    margin-bottom: 45px;
 }
 
 
@@ -318,6 +319,7 @@ padding-bottom: 75px;
 
 .input--text {
     border-radius: 25px;
+    height: 48px;
 }
 
 
@@ -354,7 +356,11 @@ padding-bottom: 75px;
     padding-bottom: 250px;
 }
     
-
+.footer-item {
+    display: inline-block;
+    width: 40%;
+    margin-right: 25px;
+}
 
 }
 
