--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,10 +106,10 @@ a:hover.navbar-brand, a:hover.nav-link {
     
 }
 
-/*.navbar-toggler:focus, .collapsed:focus {*/
-/*    box-shadow: 0 0 0 0.2rem rgba(252,252,252,.5);*/
-/*    border-color: #fff;*/
-/*}*/
+.navbar-toggler:focus, .navbar-toggler:active, .collapsed:focus {
+    box-shadow: 0 0 0 0.2rem rgba(252,252,252,.5);
+    border-color: #fff;
+}
 
 .button:focus {
     box-shadow: 0 0 0 0.2rem rgba(252,252,252,.5);
