--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ a:hover.navbar-brand, a:hover.nav-link {
     
 }
 
-.navbar-toggler:focus, .navbar-toggler:active, .collapsed:focus {
+.navbar-toggler:focus, .navbar-toggler:active, .button:focus, .button:active, .collapsed:focus, .collapsed:active, .button.navbar-toogler.collapsed:focus {
     box-shadow: 0 0 0 0.2rem rgba(252,252,252,.5);
     border-color: #fff;
 }
@@ -212,6 +212,33 @@ a:hover.navbar-brand, a:hover.nav-link {
     position: relative;
 }
 
+.container-first-section-benefits {
+    background: url('../images/havingfun.jpg') no-repeat bottom right;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.container-second-section-benefits {
+    background: url('../images/lyingingrass.jpg') no-repeat bottom right;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+
+.container-third-section-benefits {
+    background: url('../images/discussion.jpg') no-repeat bottom right;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+
+
 .container-first-section-experience {
     position: relative;
 }
@@ -296,6 +323,12 @@ padding-bottom: 150px;
 
 }
 
+.container--padding300--bottom-sm-middle-md {
+padding-top: 300px;
+padding-bottom: 0px;
+
+}
+
 .container--topbottom75 {
 padding-top: 75px;
 padding-bottom: 75px;
@@ -359,6 +392,11 @@ padding-top: 300px;
     padding-bottom: 430px;
 }
 
+.container--padding300--bottom-sm-middle-md {
+padding-top: 150px;
+padding-bottom: 150px;
+
+}
 
 .container-second-section {
     padding-top: 250px;
