--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,15 +106,11 @@ a:hover.navbar-brand, a:hover.nav-link {
     
 }
 
-.navbar-toggler:focus, .navbar-toggler:active, .button:focus, .button:active, .collapsed:focus, .collapsed:active, .button.navbar-toogler.collapsed:focus {
-    box-shadow: 0 0 0 0.2rem rgba(252,252,252,.5);
+button.navbar-toggler:focus {
     border-color: #fff;
+     outline: 0;
 }
 
-.button:focus {
-    box-shadow: 0 0 0 0.2rem rgba(252,252,252,.5);
-    border-color: #fff;
-}
 
 /*--------------- Headings */
 
