--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,11 @@ a:hover.navbar-brand, a:hover.nav-link {
     
 }
 
+.btn-success:focus, .btn-success:active {
+    border-color: #fff;
+     outline: 0;
+}
+
 button.navbar-toggler:focus {
     border-color: #fff;
      outline: 0;
@@ -119,7 +124,10 @@ button.navbar-toggler:focus {
     text-align: center;
 }
 
-
+.headingspace {
+    margin-bottom: 50px;
+    margin-top: 20px;
+}
 
 /*--------------- Buttons */
 
@@ -164,6 +172,17 @@ button.navbar-toggler:focus {
     border-color: #fff;
 }
 
+.btn-success:focus {
+    box-shadow: 0 0 0 0.2rem rgba(252,252,252,0);
+    border-color: #fff;
+}
+
+.btn-success:active {
+    background-color: rgba(216, 252, 320, 0);
+    box-shadow: 0 0 0 0.2rem rgba(252,252,252,0);
+    border-color: #fff;
+    outline: 0px;
+}
 
 #btn--footer {
     margin-top: 10px;
