--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,6 +426,9 @@ padding-top: 300px;
     height: 48px;
 }
 
+.input--width {
+    width:100%;
+}
 
 
 /*--------------- Media Queries */
@@ -434,6 +437,11 @@ padding-top: 300px;
     
     .heading--5em {
     font-size: 3em;
+}
+
+.input--width {
+    width:60%;
+    text-align: center;
 }
 
     
