Add space above h1 on experience.html to create consistent look

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,6 +419,11 @@ button.navbar-toggler:focus {
     padding-bottom: 75px;
 }
 
+.container--bottom75 {
+    /*padding-top: 75px;*/
+    padding-bottom: 75px;
+}
+
 .container--top300 {
     padding-top: 300px;
 }
